--- a/ansible1/playbooks/useradd_opsuser_bak.yml
+++ b/ansible1/playbooks/useradd_opsuser_bak.yml
@@ -1,5 +1,9 @@
 ---
 - hosts: "{{ host }}"
+  vars:
+    user1: zhangxy
+    user2: taojh
+    password: "***"
   remote_user: root
   roles:
     - useradd
